tests/ui/traits/next-solver/coherence/trait_ref_is_knowable-norm-overflow.stderr
error[E0119]: conflicting implementations of trait `Trait`
  --> $DIR/trait_ref_is_knowable-norm-overflow.rs:20:1
   |
LL | impl<T: Copy> Trait for T {}
   | ------------------------- first implementation here
LL | struct LocalTy;
LL | impl Trait for <LocalTy as Overflow>::Assoc {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation
   |
   = note: overflow evaluating the requirement `_ == <LocalTy as Overflow>::Assoc`
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`trait_ref_is_knowable_norm_overflow`)

error: hi
  --> $DIR/trait_ref_is_knowable-norm-overflow.rs:20:1
   |
LL | trait Trait {}
   | ----------- built-in `dyn Trait` implementation for this trait
...
LL | impl Trait for <LocalTy as Overflow>::Assoc {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0119`.
